update landing page v1

--- a/css/footer.css
+++ b/css/footer.css
@@ -15,6 +15,17 @@ footer {
   margin-bottom: 15px;
 }
 
+.pj-logo {
+  display: block;
+  width: fit-content;
+  margin-bottom: 15px;
+}
+
+.pj-logo img {
+  width: 290px;
+  height: auto;
+}
+
 .pj-description {
   text-align: justify;
   max-width: 387px;
@@ -72,5 +83,13 @@ footer {
 @media (max-width: 992px) {
   .pj-description {
     margin-bottom: 30px;
+  }
+}
+
+@media (max-width: 576px) {
+  .copyright ul {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
   }
 }
