--- a/css/header.css
+++ b/css/header.css
@@ -121,7 +121,14 @@ header .container {
 }
 
 .mobile-menu * {
-  color: #ffffff !important;
+  color: #ffffff;
+}
+
+.mobile-menu .mobile-nav-links a {
+  font-family: "PhuduBold";
+  font-size: 40px;
+  color: #fdf5ea;
+  font-weight: normal;
 }
 
 .mobile-menu.active {
@@ -178,7 +185,7 @@ header .container {
 }
 
 .mobile-nav-links li {
-  margin: 20px 0;
+  margin: 15px 0;
 }
 
 .mobile-nav-links a {
@@ -219,6 +226,14 @@ body.menu-open {
 
 .burger-menu {
   display: none;
+}
+
+.burger-menu span {
+  display: block;
+  width: 25px;
+  height: 3px;
+  background-color: #000000;
+  margin-bottom: 5px;
 }
 
 @media (max-width: 1200px) {
