--- a/css/footer.css
+++ b/css/footer.css
@@ -6,6 +6,10 @@ footer {
   text-align: left;
 }
 
+footer * {
+  font-family: "MontRegular";
+}
+
 .pj-name {
   width: fit-content;
   font-family: "PO";
@@ -32,7 +36,7 @@ footer {
 }
 
 .footer-b-t {
-  font-weight: bold;
+  font-family: "MontBold";
   margin-bottom: 15px;
 }
 
